  https://github.com/ocaml/ocamlbuild/pulls/$N
We also use PR#$N for pull requests.

Changes breaking compatibility are marked with a "* " bullet instead
of the usual "- ".

NEXT_RELEASE:
-------------

- #45, #190: add ppopt(arg) and ppxopt(package,arg) when -use-ocamlfind
  (Gabriel Scherer, review by whitequark,
   request by Gabriel Scherer, Gabriel Radanne and Pavel Argentov)

0.12.0 (11 Nov 2017):
---------------------

OCamlbuild 0.12.0 is a maintenance release containing mostly bugfixes
and a few user-contributed features.

- #227: install signatures.{mli,cmi,cmti} to help documentation tools
  (Daniel Bünzli and Gabriel Scherer)

- #232: fix Windows install rules
  (David Allsopp)

- #234: add "afl_instrument" and "afl_inst_ratio" flags for corresponding
  ocamlopt options.
  (Jeremy Yallop)

- #237: extend cc/ccopt/cclib flags to apply to "ocaml" compilation as well,
  as tweaking the C linker can be required for pure-OCaml projects -- see #236
  (Gabriel Scherer, report by Nathan Rebours)

- #253: only run native tests if ocamlopt is available.
  (Ximin Luo, review by whitequark and Gabriel Scherer)

- #256, #258: pass -keep-docs and -keep-locs when using -pack
  (Gabriel Scherer, report by Vincent Jacques)

- #257, #259: add `_opam` to the list of directories ignored by default;
  it is used for package-local opam switches
  (Gabriel Scherer, request by Edwin Török)

0.11.0 (5 Mar 2017):
--------------------

OCamlbuild 0.11.0 introduces a change to the way `.cmxs` files are
produced when no `.mldylib` file is absent: it will now use the exact
same semantics as `.cmxa` and `.mllib` file -- in particular, it
should not be necessary anymore to have identical
`foo.{mllib,mldylib}` files, only `foo.mllib` should suffice. See the
detailed changelog below for details.

- #111: added "nostdlib" flag for corresponding ocaml{c,opt} options
  (Thomas Wood)

- #115: add `node_modules` to the list of directories ignored by default