@@ -18,6 +18,10 @@ NEXT_RELEASE:
   (Gabriel Scherer, review by whitequark,
    request by Gabriel Scherer, Gabriel Radanne and Pavel Argentov)
 
+- #268, #269: add flag support for some ocamlmklib options:
+  custom, debug, failsafe, linkall, ccopt(..), cclib(..), rpath(..), ldopt(..)
+  (Gabriel Scherer, report by Hannes Mehnert, review by whitequark)
+
 0.12.0 (11 Nov 2017):
 ---------------------
 
